--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Java/projetos/conversorTempo/nbproject/private/
 /Java/projetos/sistemaNotas/nbproject/private/
 /Java/projetos/calculoSalario/nbproject/private/
+/Java/exercicios/Exercicios/nbproject/private/
+/Java/exercicios/ExerciciosJava/nbproject/private/
